--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "lint --fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
