--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "lint --fix": "eslint . --fix",
-    "preview": "vite preview"
-  },
+    "preview": "vite preview",
+    "test": "vitest"
+  }, 
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
