--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "lint --fix": "eslint . --fix",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "cypress run"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -28,7 +28,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "vitest": "^3.2.4"
+    "vite": "^7.1.7"
   }
 }
