--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,8 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
-        mongodb-version: ['5.0']
+        node-version: [12.x, 14.x, 16.x]
+        mongodb-version: ['4.2', '4.4', '5.0']
 
     steps:
     - uses: actions/checkout@v3
@@ -28,17 +28,6 @@ jobs:
       uses: supercharge/mongodb-github-action@1.7.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
-
-    - name: Start preview server
-      run: npm run preview &
-      env:
-        CI: true
-      
-    - name: Run Cypress tests
-      uses: cypress-io/github-action@v6
-      with:
-        wait-on: http://localhost:5173/
-        wait-on-timeout: 60
 
     - name: Clean install
       run: |
