--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "jest": "^30.2.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
@@ -35,6 +36,7 @@
     "globals": "^16.4.0",
     "jest-environment-jsdom": "^30.2.0",
     "util": "^0.12.5",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "whatwg-fetch": "^3.6.20"
   }
 }
