--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "jest",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "dependencies": {
     "@uiw/react-codemirror": "^4.25.2",
@@ -21,6 +20,7 @@
     "node-fetch": "^2.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1"
   },
